Fix blog post URLs: remove .html extension and add Vercel rewrite rules

--- a/vercel.json
+++ b/vercel.json
@@ -57,6 +57,10 @@
   ],
   "rewrites": [
     {
+      "source": "/blog/:slug",
+      "destination": "/blog/:slug.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/$1"
     }
