Complete SEO implementation: meta tags, OpenGraph, Twitter Cards, Schema.org, sitemap, robots.txt

--- a/vercel.json
+++ b/vercel.json
@@ -64,6 +64,18 @@
       "source": "/(.*)",
       "destination": "/$1"
     }
+  ],
+  "redirects": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/public/sitemap.xml",
+      "permanent": true
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/public/robots.txt",
+      "permanent": true
+    }
   ]
 }
 
